Add area in job cost sheet

--- a/sqp_job_cost_sheet/report/sqp_job_cost_sheet_view.xml
+++ b/sqp_job_cost_sheet/report/sqp_job_cost_sheet_view.xml
@@ -57,6 +57,8 @@
                         <field name="date"/>                        
                     </group>
                     <group>
+                    	<field name="area_so" />
+                    	<field name="area_mo" />
                     </group>
                     <group string="Revenue">
 		                <field name="add_disc"/>
